c3prj1_deck/grade.txt
Grading at Sat Aug  1 08:40:01 UTC 2020
Compiling deck.c
In file included from /usr/include/stdlib.h:32:0,
                 from deck.c:2:
deck.c: In function ‘make_deck_exclude’:
deck.c:78:16: error: invalid initializer
   card_t check=NULL;
                ^
deck.c: In function ‘build_remaining_deck’:
deck.c:99:25: error: incompatible type for argument 2 of ‘add_card_to’
  add_card_to(to_exclude,(*placeholder).cards[j])
                         ^
deck.c:63:6: note: expected ‘card_t {aka struct card_tag}’ but argument is of type ‘card_t * {aka struct card_tag *}’
 void add_card_to(deck_t * deck, card_t c){
      ^
deck.c:100:4: error: expected ‘;’ before ‘}’ token
    }}
    ^
Could not compile your deck.c!

Overall Grade: FAILED
